# rdd-predict

./: .env  API_DOCUMENTATION.md  Dockerfile  main.py  pyproject.toml  requirements.py  test_stream_client.py
static/: stream.html
utils/: boto.py  cloudinary_uploader.py  stream_utils.py  webrtc_handler.py
