[project]
name = "rdd-predict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.9",
    "fastapi[standard]>=0.124.4",
    "opencv-python>=4.12.0.88",
    "python-multipart>=0.0.20",
    "ultralytics>=8.3.237",
    "uvicorn>=0.38.0",
]
