[project]
name = "rdd-predict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.9",
    "cloudinary>=1.44.1",
    "fastapi[standard]>=0.124.4",
    "opencv-python>=4.12.0.88",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "ultralytics>=8.3.237",
    "uvicorn>=0.38.0",
    "websockets>=12.0",
]
